<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_program"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_teal"
        android:text="@string/menu_program"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_my_tickets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_blue"
        android:text="@string/menu_my_tickets"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_discounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_green"
        android:text="@string/menu_discounts"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_places"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_orange"
        android:text="@string/menu_places"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_red"
        android:text="@string/menu_map"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/holo_purple"
        android:text="@string/menu_contacts"
        android:textColor="@android:color/white" />

</LinearLayout>